# tix

./: .env.example  Cargo.toml  README.md  ticketsystem.db-shm  ticketsystem.db-wal
.github/workflows/: release.yml
.playwright-mcp/: page-2026-04-27T12-44-15-364Z.yml  page-2026-04-27T12-44-26-615Z.yml  page-2026-04-27T12-44-55-267Z.yml  page-2026-04-27T12-45-02-466Z.yml  page-2026-04-27T12-45-11-543Z.yml  page-2026-04-27T12-46-27-712Z.yml
crates/auth/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/i18n/: de.rs  en.rs  es.rs  mod.rs
crates/core/src/models/: project.rs  status.rs  ticket.rs  ticket_type.rs  user.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  migrations.rs  pool.rs  schema.rs
crates/db/src/repo/: mod.rs  project.rs  status.rs  ticket.rs  ticket_type.rs  user.rs
crates/web/: Cargo.toml
crates/web/src/: errors.rs  main.rs  middleware.rs
crates/web/src/handlers/: auth_handlers.rs  dashboard.rs  mod.rs  profile.rs  projects.rs  tickets.rs
crates/web/src/handlers/admin/: mod.rs  statuses.rs  ticket_types.rs  users.rs
landingpage/: index.html
landingpage/static/: style.css
src/: auth.rs  config.rs  db.rs  errors.rs  main.rs  middleware.rs
src/handlers/: auth_handlers.rs  dashboard.rs  mod.rs  profile.rs  projects.rs  tickets.rs
src/handlers/admin/: mod.rs  statuses.rs  ticket_types.rs  users.rs
src/models/: mod.rs  project.rs  status.rs  ticket.rs  ticket_type.rs  user.rs
static/: style.css
templates/: base.html  dashboard.html  profile.html
templates/admin/statuses/: form.html  list.html
templates/admin/ticket_types/: form.html  list.html
templates/admin/users/: edit.html  list.html  new.html
templates/auth/: login.html  register.html
templates/projects/: detail.html  form.html  list.html
templates/tickets/: detail.html  form.html  list.html
