[package]
name = "ticketsystem"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
askama = "0.12"
askama_actix = "0.14"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["rand_core"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
