[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/auth",
    "crates/db",
    "crates/web",
]

[profile.release]
opt-level = "z"     # Optimize for size. "s" is also an option.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units for better optimization
panic = "abort"     # Remove panic unwinding code
strip = true        # Automatically strip symbols from the binary

