[package]
name = "ticketsystem-db"
version = "0.1.0"
edition = "2024"

[features]
default = ["migrations"]
migrations = []

[dependencies]
ticketsystem-core = { path = "../core" }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
uuid = { version = "1", features = ["v4"] }
